Added more endpoints
